[package]
name = "ss-tarkov-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde_json = "1.0.108"
chrono = "0.4.31"
tray-item = "0.9.0"
process_list = "0.2.1"
lazy_static = "1.4.0"

[build-dependencies]
embed-resource = "2.4.0"
